--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,12 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation('org.postgresql:postgresql')
+	runtimeOnly 'org.postgresql:postgresql'
 
 	//The following libraries create the database, and give us access to the database
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.h2database:h2'
+	//runtimeOnly 'com.h2database:h2'
 
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
