--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation('org.postgresql:postgresql')
+	//implementation('org.postgresql:postgresql')
 	runtimeOnly 'org.postgresql:postgresql'
 
 	//The following libraries create the database, and give us access to the database
